logs/rPackages.RcmdrPlugin_BiclustGUI_err.log
these 9 derivations will be built:
  /nix/store/jsb61z64c52f2iij1v73sgcil54v24nq-r-tcltk2-1.2-11.drv
  /nix/store/3fvbrc51cgsdama53riglpbrp8zpl3m3-r-Rcmdr-2.9-5.drv
  /nix/store/8kc83ihxyn3jbxi2z56g1aa3br01siwd-r-iBBiG-1.14.0.drv
  /nix/store/92mir9n61in7bvpv303qjks5d6w01g15-r-s4vd-1.1-1.drv
  /nix/store/h9abzvfc47avbwks5kv9l7pf7zg764v6-r-graph-1.48.0.drv
  /nix/store/jywlby4zg3b9b7wwbbqs3gi75bsvb497-r-GSEABase-1.32.0.drv
  /nix/store/nm3p2cnzi9sgd5y8dga6c7c4bmi4q33q-r-BicARE-1.28.0.drv
  /nix/store/szl2l1vyzqy1q7dfw51bnqqrrd4rj5y8-r-superbiclust-1.2.drv
  /nix/store/kwibpdhv0icn803r0hrzaiqbph4sfv6s-r-RcmdrPlugin.BiclustGUI-1.1.3.1.drv
these 5 paths will be fetched (5.76 MiB download, 5.76 MiB unpacked):
  /nix/store/brl0i7whwgg1pc37vxqsp2gc9z8q9g6j-BicARE_1.28.0.tar.gz
  /nix/store/n4s9bgwyn1z3x8fy8g3f6w0iblvqvzhc-RcmdrPlugin.BiclustGUI_1.1.3.1.tar.gz
  /nix/store/k9pj5mg0v5gx4bm1qbk7gj2gmag644kz-iBBiG_1.14.0.tar.gz
  /nix/store/84j4ryc89si38rc0dhihjmy1a9rrl0rv-s4vd_1.1-1.tar.gz
  /nix/store/vlgic1ljl25i887h097xggnz1m7myyc5-superbiclust_1.2.tar.gz
copying path '/nix/store/n4s9bgwyn1z3x8fy8g3f6w0iblvqvzhc-RcmdrPlugin.BiclustGUI_1.1.3.1.tar.gz' from 'https://cache.nixos.org'...
copying path '/nix/store/brl0i7whwgg1pc37vxqsp2gc9z8q9g6j-BicARE_1.28.0.tar.gz' from 'https://cache.nixos.org'...
copying path '/nix/store/k9pj5mg0v5gx4bm1qbk7gj2gmag644kz-iBBiG_1.14.0.tar.gz' from 'https://cache.nixos.org'...
copying path '/nix/store/84j4ryc89si38rc0dhihjmy1a9rrl0rv-s4vd_1.1-1.tar.gz' from 'https://cache.nixos.org'...
copying path '/nix/store/vlgic1ljl25i887h097xggnz1m7myyc5-superbiclust_1.2.tar.gz' from 'https://cache.nixos.org'...
building '/nix/store/jsb61z64c52f2iij1v73sgcil54v24nq-r-tcltk2-1.2-11.drv'...
building '/nix/store/h9abzvfc47avbwks5kv9l7pf7zg764v6-r-graph-1.48.0.drv'...
Running phase: unpackPhase
unpacking source archive /nix/store/18w0m6b7b8crk7kxilkj8dxixq6y4fdy-tcltk2_1.2-11.tar.gz
building '/nix/store/8kc83ihxyn3jbxi2z56g1aa3br01siwd-r-iBBiG-1.14.0.drv'...
building '/nix/store/92mir9n61in7bvpv303qjks5d6w01g15-r-s4vd-1.1-1.drv'...
building '/nix/store/szl2l1vyzqy1q7dfw51bnqqrrd4rj5y8-r-superbiclust-1.2.drv'...
source root is tcltk2
setting SOURCE_DATE_EPOCH to timestamp 1419068106 of file tcltk2/MD5
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘tcltk2’ ...
** package ‘tcltk2’ correctement décompressé et sommes MD5 vérifiées
** using staged installation
** R
** inst
** byte-compile and prepare package for lazy loading
Running phase: unpackPhase
unpacking source archive /nix/store/fac79mzcbdrkazwfsyzj2najqw8lik3r-graph_1.48.0.tar.gz
source root is graph
setting SOURCE_DATE_EPOCH to timestamp 1444782779 of file graph/src/graph.c
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
* installing *source* package ‘graph’ ...
** using staged installation
** libs
using C compiler: ‘clang version 16.0.6’
using SDK: ‘’
Running phase: unpackPhase
unpacking source archive /nix/store/k9pj5mg0v5gx4bm1qbk7gj2gmag644kz-iBBiG_1.14.0.tar.gz
source root is iBBiG
setting SOURCE_DATE_EPOCH to timestamp 1444789578 of file iBBiG/src/iBBiG.h
Running phase: patchPhase
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
Running phase: checkPhase
Running phase: installPhase
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c graph.c -o graph.o
Running phase: unpackPhase
unpacking source archive /nix/store/84j4ryc89si38rc0dhihjmy1a9rrl0rv-s4vd_1.1-1.tar.gz
source root is s4vd
setting SOURCE_DATE_EPOCH to timestamp 1447949753 of file s4vd/MD5
Running phase: patchPhase
* installing *source* package ‘iBBiG’ ...
** using staged installation
** libs
Running phase: updateAutotoolsGnuConfigScriptsPhase
Running phase: configurePhase
Running phase: buildPhase
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -dynamiclib -Wl,-headerpad_max_install_names -undefined dynamic_lookup -L/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/lib -L/nix/store/88xkgzh5g9xppsg3hdxxxh9q43rnxk6k-libcxx-16.0.6/lib -o graph.so graph.o -L/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/lib -lR -lintl -Wl,-framework -Wl,CoreFoundation
Running phase: checkPhase
using C compiler: ‘clang version 16.0.6’
Running phase: installPhase
using SDK: ‘’
Running phase: unpackPhase
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c R_init_iBBiG.c -o R_init_iBBiG.o
/nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c iBBiG.c -o iBBiG.o
unpacking source archive /nix/store/vlgic1ljl25i887h097xggnz1m7myyc5-superbiclust_1.2.tar.gz
source root is superbiclust
iBBiG.c:300:22: error: call to undeclared function 'time'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
     srand((unsigned)time(NULL));               
                     ^
1 error generated.
make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: iBBiG.o] Error 1
make: *** Attente des tâches non terminées....
ERROR: compilation failed for package ‘iBBiG’
setting SOURCE_DATE_EPOCH to timestamp 1622181602 of file superbiclust/MD5
* removing ‘/nix/store/1bcpdifj21ngdh611sdnj61p1agzkgx3-r-iBBiG-1.14.0/library/iBBiG’
error: builder for '/nix/store/8kc83ihxyn3jbxi2z56g1aa3br01siwd-r-iBBiG-1.14.0.drv' failed with exit code 1;
       last 25 log lines:
       > Running phase: unpackPhase
       > unpacking source archive /nix/store/k9pj5mg0v5gx4bm1qbk7gj2gmag644kz-iBBiG_1.14.0.tar.gz
       > source root is iBBiG
       > setting SOURCE_DATE_EPOCH to timestamp 1444789578 of file iBBiG/src/iBBiG.h
       > Running phase: patchPhase
       > Running phase: updateAutotoolsGnuConfigScriptsPhase
       > Running phase: configurePhase
       > Running phase: buildPhase
       > Running phase: checkPhase
       > Running phase: installPhase
       > * installing *source* package ‘iBBiG’ ...
       > ** using staged installation
       > ** libs
       > using C compiler: ‘clang version 16.0.6’
       > using SDK: ‘’
       > /nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c R_init_iBBiG.c -o R_init_iBBiG.o
       > /nix/store/v39c0h6xv6hvki2k1bsyp5n090q8y2bp-clang-wrapper-16.0.6/bin/cc -I"/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/include" -DNDEBUG   -isystem /nix/store/0mmz5i705116bfykc7i1r9jxqwyghj2a-libcxx-16.0.6-dev/include/c++/v1    -fPIC  -g -O2  -c iBBiG.c -o iBBiG.o
       > iBBiG.c:300:22: error: call to undeclared function 'time'; ISO C99 and later do not support implicit function declarations [-Wimplicit-function-declaration]
       >      srand((unsigned)time(NULL));
       >                      ^
       > 1 error generated.
       > make: *** [/nix/store/lir8rmsk7dxbj7v1spqmv69z4mafg16l-R-4.4.2/lib/R/etc/Makeconf:195: iBBiG.o] Error 1
       > make: *** Attente des tâches non terminées....
       > ERROR: compilation failed for package ‘iBBiG’
       > * removing ‘/nix/store/1bcpdifj21ngdh611sdnj61p1agzkgx3-r-iBBiG-1.14.0/library/iBBiG’
       For full logs, run 'nix log /nix/store/8kc83ihxyn3jbxi2z56g1aa3br01siwd-r-iBBiG-1.14.0.drv'.
error: 1 dependencies of derivation '/nix/store/kwibpdhv0icn803r0hrzaiqbph4sfv6s-r-RcmdrPlugin.BiclustGUI-1.1.3.1.drv' failed to build
